// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar/sidebar_category/sidebar_category_menu should match snapshot and contain correct buttons 1`] = `
<Fragment>
  <Connect(SidebarMenu)
    ariaLabel="Category Menu"
    buttonAriaLabel="Category Menu"
    id="SidebarCategoryMenu-category1"
    isMenuOpen={false}
    onToggleMenu={[Function]}
    tooltipText="Category options"
  >
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="icon-pencil-outline"
          />
        }
        id="rename-category1"
        onClick={[Function]}
        show={true}
        text="Rename Category"
      />
      <MenuItemAction
        icon={
          <i
            className="icon-trash-can-outline"
          />
        }
        id="delete-category1"
        isDangerous={true}
        onClick={[Function]}
        show={true}
        text="Delete Category"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="icon-folder-plus-outline"
          />
        }
        id="create-category1"
        onClick={[Function]}
        show={true}
        text="Create New Category"
      />
    </MenuGroup>
  </Connect(SidebarMenu)>
</Fragment>
`;

exports[`components/sidebar/sidebar_category/sidebar_category_menu should match snapshot when category is favorites 1`] = `
<Fragment>
  <Connect(SidebarMenu)
    ariaLabel="Category Menu"
    buttonAriaLabel="Category Menu"
    id="SidebarCategoryMenu-category1"
    isMenuOpen={false}
    onToggleMenu={[Function]}
    tooltipText="Category options"
  >
    <MenuGroup />
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="icon-folder-plus-outline"
          />
        }
        id="create-category1"
        onClick={[Function]}
        show={true}
        text="Create New Category"
      />
    </MenuGroup>
  </Connect(SidebarMenu)>
</Fragment>
`;
